<resources>
    <string name="app_name">iClass</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_for_this_course">Register for this course</string>
    <string name="register">Register</string>
    <string name="are_you_sure_you_want_to_register_in_this_course">Are you sure? You want to register in this course.</string>
    <string name="Register">Register Account</string>
    <string name="course_name">Course Name</string>
    <string name="faculty_name">Faculty Name</string>
    <string name="department_name">Department Name</string>
    <string name="course_description">Course Description</string>
    <string name="title_activity_faculty_course_content">Faculty Course Content</string>

    <string name="title_activity_splash_screen">Splash Screen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="profile">Profile</string>
    <string name="onlinereg">online class register</string>
</resources>
