<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="4dp"
    card_view:cardUseCompatPadding="true"
    card_view:contentPaddingBottom="5dp"
    card_view:cardPreventCornerOverlap="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/courseName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#1E88E5"
            android:text="@string/course_name"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/facultyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faculty_name"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:layout_below="@id/courseName"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/course_description"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_below="@id/facultyName" />

        <TextView
            android:id="@+id/department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department_name"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:layout_above="@+id/description"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</android.support.v7.widget.CardView>