<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textSize="25sp"
        android:id="@+id/dialog_heading"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_register_in_this_course"
        android:id="@+id/dialog_descreption"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_register"
        android:text="@string/register"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:background="#1E88E5"
        android:textColor="#FFFFFF"
        android:gravity="center"/>

</LinearLayout>